--- a/rtc-javascript/txet.html
+++ b/rtc-javascript/txet.html
@@ -7,13 +7,7 @@
 </head>
 <body>
     <script>
-
-        const a = 10;
-        const b = 20;
-
-
-        const c = a * b ;
-        console.log (`sum: ${c}`)
+        alert("I am mayur")
     </script>
     
 </body>
