--- a/rtc-javascript/logic.html
+++ b/rtc-javascript/logic.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Logical operters</title>
 </head>
+
 <body>
+
     <script>
-        
-    </script>
-    
+        const result = 3 == 6 || 8 > 14;
+
+        console.log(result);
+
+    </Script>
 </body>
+
 </html>
