--- a/rtc-javascript/logic.html
+++ b/rtc-javascript/logic.html
@@ -10,7 +10,7 @@
 <body>
 
     <script>
-        const result = 3 == 6 || 8 > 14;
+        const result = 5 == 5 && 8 > 4;
 
         console.log(result);
 
