--- a/rtc-javascript/logic.html
+++ b/rtc-javascript/logic.html
@@ -12,7 +12,7 @@
     <script>
         const result = 5 == 5 && 8 > 4;
 
-        console.log(result);
+        console.log(!result);
 
     </Script>
 </body>
